Changed content of Pixel Snappers

--- a/life.html
+++ b/life.html
@@ -804,28 +804,28 @@
                 <span>
 
                   <p>
-                    <strong>Co-ordinator</strong>: Amit Kumar</p>
-                  <p style="text-align: justify;">The Pixel Snappers is photography club of IIT Bhilai started by Bapuji and Vignan and coordinated by Mayank
-                    Sharma in its second term. From the very beginning of the IIT Bhilai members of the club have showed
-                    their dedication and covered all the events organised inside the institute. Members of the club have
-                    also covered each tournament of PRAYATNA organised in winter semester 2018. </p>
+                    <strong>Co-ordinator</strong>: Amit Kumar
+                  </p>
+
+                  <p style="text-align: justify;">From the very beginning of the IIT Bhilai members of the club have showed their dedication and covered all the events organised inside the institute.<br>
+                  We, as the members of the photography club, seek to display our love for photography through the consecutive criticism of our peers, leisure activities that involve photography, and the promotion of photography in and around the IIT Bhilai campus.</p>
+
+
                   <p>
-
-                    <p>
-                      <strong>Events organised by the club</strong>
-                    </p>
-                    <p style="text-align: justify;">
-                      Club has organised photography competitions weekly starting from IIT Bhilai’s first batch itself and giving prizes to winners.
-
-                    </p>
-
-
-
-                    <strong>Achievements</strong>
+                    <strong>Activities</strong>
                   </p>
                   <p style="text-align: justify;">
-                    Club represented IIT Bhilai in the Photowalk 3.0 ( a theme based photography competition ) conducted by IIM Raipur near Marine
-                    Drive, Raipur and won first prize of worth of cash ₹ 5000.
+                    The club have captured moments from every event whether it was cultural event or NSS activity in both photos as well as videos. <br>
+                    Members of the club have also covered each tournament of PRAYATNA organised in winter semester 2018.<br>
+                    Club has organised photography competitions weekly starting from IIT Bhilai’s first batch itself and giving prizes to winners.
+                  </p>
+
+
+
+                  <strong>Achievements</strong>
+
+                  <p style="text-align: justify;">
+                    Club represented IIT Bhilai in the Photowalk 3.0 ( a theme based photography competition ) conducted by IIM Raipur near Marine Drive, Raipur and won first prize of worth of cash ₹ 5000.
                   </p>
 
                   <p>
@@ -837,6 +837,15 @@
                     <li>&cir;&nbsp;Theme based short video making competition.</li>
                     <li>&cir;&nbsp;Making short videos while collaborating with Drishya, the drama club.</li>
                   </ul>
+
+                  <strong>Follow Us</strong>
+
+                  <p style="text-align: justify;">
+                    <a href="https://facebook.com/ThePixelSnappers/">Facebook</a>
+                    <a href="https://instagram.com/thepixelsnappers/">Instagram</a>
+                    <a href="https://twitter.com/pixelsnappers">Twitter</a>
+                    <a href="https://youtube.com/channel/UCs_b3N6z8XZSCY4KUrcQnsQ">Youtube</a>
+                  </p>
 
                 </span>
               </div>
