Changes in Mentors' Details

--- a/mentors_2018.html
+++ b/mentors_2018.html
@@ -194,7 +194,7 @@
 			                <span class="card-title grey-text text-darken-4">Aniket<i class="material-icons right">close</i></span>
 			                <br/>
 			                <p><i class="material-icons left">book</i><small>CSE Dept 2017</small></p>
-			                <p><i class="material-icons left">home</i><small>??????</small></p>
+			                <p><i class="material-icons left">home</i><small>Patna, Bihar</small></p>
 			                <p><i class="material-icons left">call</i><small>9521205979</small></p>
 			                <p><i class="material-icons left">email</i><small>aniketr@iitbhilai.ac.in</small></p>
 			                <p style="text-align: center;"><a href="https://www.facebook.com/profile.php?id=100010720866538"><i class="fa fa-facebook"></i>acebook Profile</a></p>
@@ -426,7 +426,7 @@
 									<p><i class="material-icons left">home</i><small>Mumbai, Maharashtra</small></p>
 									<p><i class="material-icons left">call</i><small>9518937578</small></p>
 									<p><i class="material-icons left">email</i><small>shivansha@iitbhilai.ac.in</small></p>
-									<p style="text-align: center;"><a href="https://www.facebook.com/shivani.tripathi.562"><i class="fa fa-facebook"></i>acebook Profile</a></p>
+									<p style="text-align: center;"><a href="https://www.facebook.com/shivansh.mishra.1232"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
 				</div>
@@ -486,7 +486,7 @@
 									<span class="card-title grey-text text-darken-4">Yash<i class="material-icons right">close</i></span>
 									<br/>
 									<p><i class="material-icons left">book</i><small>ME Dept 2017</small></p>
-									<p><i class="material-icons left">home</i><small>????</small></p>/
+									<p><i class="material-icons left">home</i><small>Indore, Madhya Pradesh</small></p>
 									<p><i class="material-icons left">call</i><small>9589059032</small></p>
 									<p><i class="material-icons left">email</i><small>yashtiwari@iitbhilai.ac.in</small></p>
 									<p style="text-align: center;"><a href="https://www.facebook.com/yash.tiwari.31149"><i class="fa fa-facebook"></i>acebook Profile</a></p>
