few animations added

--- a/Polaris_v2/scitech.html
+++ b/Polaris_v2/scitech.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Bitter:700|Dancing+Script:700" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
+        <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/style.css">
 
         <title>Polaris - Student Mentorship Program</title>
@@ -34,6 +35,7 @@
                     <ul class="navigation__list">
                         <li class="navigation__list-item"><a href="mentors.html" class="navigation__link">Meet your Mentors</a></li>
                         <li class="navigation__list-item"><a href="academics.html" class="navigation__link">Academics</a></li>
+                        <li class="navigation__list-item"><a href="departments.html" class="navigation__link">Departments</a></li>
                         <li class="navigation__list-item"><a href="around.html" class="navigation__link">Around the Campus</a></li>
                         <li class="navigation__list-item"><a href="nssandnso.html" class="navigation__link">NSS and NSO</a></li>
                         <li class="navigation__list-item"><a href="queries.html" class="navigation__link">Queries</a></li>
@@ -61,7 +63,7 @@
             </div>
         </header>
 
-        <section>
+        <section class="section">
             <div class="container">
                 <h2 class="heading-secondary">Sci-tech Clubs</h2>
                 <div class="clubs">
@@ -202,6 +204,7 @@
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
+        <script src="js/scrollspy.js"></script>
         <script src="js/script.js"></script>
     
     </body>
