--- a/Polaris_v2/index.html
+++ b/Polaris_v2/index.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Bitter:700|Dancing+Script:700" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
+        <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/style.css">
 
         <title>Polaris - Student Mentorship Program</title>
@@ -34,6 +35,7 @@
                     <ul class="navigation__list">
                         <li class="navigation__list-item"><a href="mentors.html" class="navigation__link">Meet your Mentors</a></li>
                         <li class="navigation__list-item"><a href="academics.html" class="navigation__link">Academics</a></li>
+                        <li class="navigation__list-item"><a href="departments.html" class="navigation__link">Departments</a></li>
                         <li class="navigation__list-item"><a href="around.html" class="navigation__link">Around the Campus</a></li>
                         <li class="navigation__list-item"><a href="nssandnso.html" class="navigation__link">NSS and NSO</a></li>
                         <li class="navigation__list-item"><a href="queries.html" class="navigation__link">Queries</a></li>
@@ -61,7 +63,7 @@
             </div>
         </header>
 
-        <section>
+        <section class="section">
             <div class="container">
                 <div class="introduction">
                     <h2 class="heading-secondary">Welcome to <br><span>Indian Institute of Technology Bhilai</span></h2>
@@ -72,7 +74,7 @@
 
         <div class="line-break"></div>
 
-        <section>
+        <section class="section">
             <div class="container">
                 <h2 class="heading-secondary">Student Mentorship Program</h2>
                 <div class="info">
@@ -92,19 +94,43 @@
 
         <div class="line-break"></div>
 
-        <section>
+        <section class="section">
             <div class="container">
                 <div class="message">
                     <h2 class="heading-secondary">Message from <br><span>Council of Student Affairs</span></h2>
-                    <p class="message__text"><span>Dear friends,</span> <br><br>On behalf of the student community, I welcome you to Indian Institute of Technology, Bhilai. Congratulations on clearing one of the toughest and most competent examination. But don’t be complacent as you have cleared one hurdle and there will still be many crossing your way. Being one of the newest IITs’, we are in the early stages of the development of this institute. We are slowly and gradually paving our way in becoming one of the Elite institutes this country has seen. The Students’ Gymkhana team acts as representative of the students. Here we believe in the well being and all round development of individuals. There will be ample opportunities; you just need to grasp them in order to excel in your endeavour. You will play an integral role in framing the legacy of this institute and carrying it forward. I am positive that you will have a cracking experience while your stay at IIT Bhilai that you will cherish throughout your life.</p><br>
-                    <p class="message__byline">With best wishes, <br>Ketan Mishra <br> President, CoSA</p>
+                    <p class="message__text"><span>Dear friends,</span> <br><br>Welcome to Indian Institute of Technology Bhilai, one of the most prestigious institute of our country. You have cleared one test of your life with bright colours of success but many of them are still to clear. On behalf of whole student community I wish you all the best for your future journey that starts here at IIT Bhilai.
+                    <br><br>
+                    At IIT Bhilai we offer excellent environment for overall development of student. In Academics we have world class academic curriculum, well equipped labs, and library. In parallel throughout the year we have a plethora of cultural and technical events organized by the Council of Student Affairs for students to pursue their hobbies and develop interpersonal skills. CoSA exist to facilitate the availability of different opportunities for the student and also act as their voice. We are the association made by the student made of the student and made for the student. <br><br>
+                    
+                    As President CoSA I assure you that you will enjoy each and every minute of your stay at IIT Bhilai and collect the memories that you will cherish throughout your life. Once again welcome you to join our hand in our journey towards excellence. </p><br>
+                    <p class="message__byline">With best wishes,</p>
+                    <div class="row">
+                        <div class="dev">
+                            <div class="col-1-of-4">
+                                <figure class="dev__shape">
+                                    <img src="img/ketan.JPG" alt="Ketan Mishra" class="dev__img dev__img--president">
+                                    <figcaption class="dev__caption">Ketan Mishra</figcaption>
+                                </figure>
+                                <div class="dev__name">President, CoSA</div>
+                                <a href="mailto:President_CoSA@iitbhilai.ac.in" class="dev__profile">
+                                    <i class="far fa-envelope dev__profile--icon"></i>
+                                </a>
+                                <a href="https://www.facebook.com/ketan.mishra.3107" class="dev__profile">
+                                    <i class="fab fa-facebook-f dev__profile--icon"></i>
+                                </a>
+                                <div class="dev__phone">
+                                    <i class="fas fa-phone dev__phone--icon"></i>&nbsp; +91 &dash; 8109757005
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
         <div class="line-break"></div>
 
-        <section>
+        <section class="section">
             <div class="container">
                 <h2 class="heading-secondary">Developers</h2>
             </div>
@@ -113,35 +139,53 @@
                 <div class="dev">
                     <div class="col-1-of-3">
                         <figure class="dev__shape">
-                            <img src="img/devs.jpg" alt="John Doe" class="dev__img">
-                            <figcaption class="dev__caption">John Doe</figcaption>
+                            <img src="img/devs/sharad.jpg" alt="Sharad Roy" class="dev__img">
+                            <figcaption class="dev__caption">Sharad Roy</figcaption>
                         </figure>
                         <div class="dev__name">Front-End Developer</div>
-                        <a href="#" class="dev__profile">
+                        <a href="mailto:sharadr@iitbhilai.ac.in" class="dev__profile">
+                            <i class="far fa-envelope dev__profile--icon"></i>
+                        </a>
+                        <a href="https://www.facebook.com/sharad.roy29" target="_blank" class="dev__profile">
                             <i class="fab fa-facebook-f dev__profile--icon"></i>
                         </a>
+                        <div class="dev__phone">
+                            &nbsp;
+                        </div>
                     </div>
 
                     <div class="col-1-of-3">
                         <figure class="dev__shape">
-                            <img src="img/devs.jpg" alt="John Doe" class="dev__img">
-                            <figcaption class="dev__caption">John Doe</figcaption>
+                            <img src="img/devs/pramodh.jpeg" alt="Sri Pramodh" class="dev__img">
+                            <figcaption class="dev__caption">Sri Pramodh</figcaption>
                         </figure>
-                        <div class="dev__name">Front-End Developer</div>
-                        <a href="#" class="dev__profile">
+                        <div class="dev__name">Back-End Developer</div>
+                        <a href="mailto:rachuris@iitbhilai.ac.in" class="dev__profile">
+                            <i class="far fa-envelope dev__profile--icon"></i>
+                        </a>
+                        <a href="https://www.facebook.com/pramodhrachuri" target="_blank" class="dev__profile">
                             <i class="fab fa-facebook-f dev__profile--icon"></i>
                         </a>
+                        <div class="dev__phone">
+                            <i class="fas fa-phone dev__phone--icon"></i>&nbsp; +91 &dash; 9999999999
+                        </div>
                     </div>
 
                     <div class="col-1-of-3">
                         <figure class="dev__shape">
-                            <img src="img/devs.jpg" alt="John Doe" class="dev__img">
-                            <figcaption class="dev__caption">John Doe</figcaption>
+                            <img src="img/devs/ahaan.jpg" alt="Ahaan Dabholkar" class="dev__img">
+                            <figcaption class="dev__caption">Ahaan Dabholkar</figcaption>
                         </figure>
-                        <div class="dev__name">Front-End Developer</div>
-                        <a href="#" class="dev__profile">
+                        <div class="dev__name">Back-End Developer</div>
+                        <a href="mailto:ahaand@iitbhilai.ac.in" class="dev__profile">
+                            <i class="far fa-envelope dev__profile--icon"></i>
+                        </a>
+                        <a href="https://www.facebook.com/ahaan.dabholkar" target="_blank" class="dev__profile">
                             <i class="fab fa-facebook-f dev__profile--icon"></i>
                         </a>
+                        <div class="dev__phone">
+                            <i class="fas fa-phone dev__phone--icon"></i>&nbsp; +91 &dash; 9999999999
+                        </div>
                     </div>
                 </div>
             </div>
@@ -152,24 +196,36 @@
 
                     <div class="col-1-of-4">
                         <figure class="dev__shape">
-                            <img src="img/devs.jpg" alt="John Doe" class="dev__img">
-                            <figcaption class="dev__caption">John Doe</figcaption>
+                            <img src="img/devs/aniket.jpg" alt="Aniket Raj" class="dev__img">
+                            <figcaption class="dev__caption">Aniket Raj</figcaption>
                         </figure>
-                        <div class="dev__name">Front-End Developer</div>
-                        <a href="#" class="dev__profile">
+                        <div class="dev__name">Content Writer</div>
+                        <a href="mailto:aniketr@iitbhilai.ac.in" class="dev__profile">
+                            <i class="far fa-envelope dev__profile--icon"></i>
+                        </a>
+                        <a href="https://www.facebook.com/profile.php?id=100010720866538" target="_blank" class="dev__profile">
                             <i class="fab fa-facebook-f dev__profile--icon"></i>
                         </a>
+                        <div class="dev__phone">
+                            <i class="fas fa-phone dev__phone--icon"></i>&nbsp; +91 &dash; 9521205979
+                        </div>
                     </div>
 
                     <div class="col-1-of-4">
                         <figure class="dev__shape">
-                            <img src="img/devs.jpg" alt="John Doe" class="dev__img">
-                            <figcaption class="dev__caption">John Doe</figcaption>
+                            <img src="img/devs/gaurav.jpg" alt="Gaurav Verma" class="dev__img">
+                            <figcaption class="dev__caption">Gaurav Verma</figcaption>
                         </figure>
-                        <div class="dev__name">Front-End Developer</div>
-                        <a href="#" class="dev__profile">
+                        <div class="dev__name">Content Writer</div>
+                        <a href="mailto:gauravv@iitbhilai.ac.in" class="dev__profile">
+                            <i class="far fa-envelope dev__profile--icon"></i>
+                        </a>
+                        <a href="https://www.facebook.com/gv99gv" target="_blank" class="dev__profile">
                             <i class="fab fa-facebook-f dev__profile--icon"></i>
                         </a>
+                        <div class="dev__phone">
+                            <i class="fas fa-phone dev__phone--icon"></i>&nbsp; +91 &dash; 7976521104
+                        </div>
                     </div>
 
                     <div class="col-1-of-4">&nbsp;</div>
@@ -218,6 +274,7 @@
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
+        <script src="js/scrollspy.js"></script>
         <script src="js/script.js"></script>
     
     </body>
